@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/dogecoind
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Feb 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  dogecoind-1.3.ebuild, dogecoind-9999.ebuild:
+  Inherit user.
 
 *dogecoind-1.3 (27 Dec 2013)
 
